# nvml

./: .gitignore  .gitmodules  COPYRIGHT  LICENSE  README.md
workspace/nvml/: .cargo  Cargo.toml  Xargo.toml  x86_64-apple-darwin-ivybridge.json
workspace/nvml/experiments/: tx-sample.c  tx-sample.clang.cpp  tx-sample.cpp  tx-sample.rs  x.c
workspace/nvml/src/: CONCURRENCY_NOTES.txt  Configuration.rs  Environment Variables.md  ExtendedNonNull.rs  IsNotNull.rs  Pools.rs  ToNonNull.rs  initialiseMemoryFunctions.rs  initialise_memory_functions.rs  lib.rs  offset_of.rs  usePath.rs  use_path.rs
workspace/nvml/src/block/: PMEMblkpoolEx.rs  mod.rs
workspace/nvml/src/blockPool/: BlockPool.rs  BlockPoolConfiguration.rs  BlockPoolDropWrapper.rs  BlockPoolsConfiguration.rs  PMEMblkpoolEx.rs  PersistentMemoryBlockPoolPathExt.rs  initialiseMemoryFunctions.rs  mod.rs
workspace/nvml/src/block_pool/: BlockPool.rs  BlockPoolConfiguration.rs  BlockPoolPathExt.rs  BlockPoolsConfiguration.rs  PMEMblkpoolEx.rs  PMEMblkpoolExt.rs  PersistentMemoryBlockPoolPathExt.rs  initialise_memory_functions.rs  mod.rs
workspace/nvml/src/ctoPool/: CtoBox.rs  CtoPool.rs  CtoPoolAllocationError.rs  CtoPoolAllocator.rs  CtoPoolDropWrapper.rs  CtoPoolInner.rs  CtoPoolOpenError.rs  CtoRc.rs  CtoRcCounter.rs  CtoRcInner.rs  CtoRootBox.rs  CtoSafe.rs  PMEMctopoolEx.rs  PersistentMemoryCtoPoolPathExt.rs  WeakCtoRc.rs  handleError.rs  initialiseMemoryFunctions.rs  mod.rs
workspace/nvml/src/cto_pool/: Allocator.rs  CtoBox.rs  CtoBoxInner.rs  CtoPool.rs  CtoPoolAlloc.rs  CtoPoolAllocGuard.rs  CtoPoolAllocGuardReference.rs  CtoPoolAllocationError.rs  CtoPoolAllocator.rs  CtoPoolArc.rs  CtoPoolArcInner.rs  CtoPoolInner.rs  CtoPoolOpenError.rs  CtoPoolPathExt.rs  CtoRc.rs  CtoRcInner.rs  CtoRootBox.rs  CtoSafe.rs  PMEMctopoolEx.rs  PMEMctopoolExt.rs  PersistentMemoryCtoPoolPathExt.rs  PersistentMemoryWrapper.rs  WeakCtoRc.rs  initialise_memory_functions.rs  mod.rs
workspace/nvml/src/errors/: ErrorFunction.rs  GenericError.rs  LastErrorMessageOnThisThreadIsInvalidError.rs  PmdkError.rs  mod.rs
workspace/nvml/src/hyper_thread/: MaximumSupportedHyperThreads.rs  current_hyper_thread_index.rs  hyper_thread_index.rs  maximum_number_of_hyper_threads.rs  mod.rs
workspace/nvml/src/logPool/: AppendError.rs  GenericError.rs  LastErrorMessageOnThisThreadIsInvalidError.rs  LogPool.rs  LogPoolConfiguration.rs  LogPoolDropWrapper.rs  LogPoolsConfiguration.rs  PMEMlogpoolEx.rs  PersistentMemoryLogPoolPathExt.rs  WalkCallbackResult.rs  initialiseMemoryFunctions.rs  mod.rs
workspace/nvml/src/log_pool/: AppendError.rs  ForEachChunkCallback.rs  LogPool.rs  LogPoolConfiguration.rs  LogPoolPathExt.rs  LogPoolsConfiguration.rs  PMEMlogpoolEx.rs  PMEMlogpoolExt.rs  PersistentMemoryLogPoolPathExt.rs  WalkCallbackResult.rs  initialise_memory_functions.rs  mod.rs
workspace/nvml/src/objectPool/: ConditionVariable.rs  Initializable.rs  ListEntryPersistable.rs  MutexLock.rs  MutexLockablePersistable.rs  MutexLockablePersistentObjectMemory.rs  OID.rs  ObjectPool.rs  ObjectPoolConfiguration.rs  ObjectPoolDropWrapper.rs  ObjectPoolPersistOnDrop.rs  ObjectPoolsConfiguration.rs  OidWrapper.rs  PMEMoidIterator.rs  Persistable.rs  PersistentCircularDoublyLinkedList.rs  Zero.rs  (+13 more)
(+229 files in other folders)
