# This file is part of nvml. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/nvml/master/COPYRIGHT. No part of nvml, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of nvml. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/nvml/master/COPYRIGHT.


[package]
name = "nvml"
description = "nvml"
keywords = ["NVML", "pmem", "libpmem", "persistent", "memory"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/nvml/blob/master/README.md"
homepage = "https://github.com/lemonrock/nvml"
repository = "https://github.com/lemonrock/nvml.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[dependencies]
bitflags = { path = "../bitflags" }
errno = "0.2"
interpolate_idents = { git = "https://github.com/lemonrock/interpolate_idents", branch = "rust-nightly-as-of-May-1st-2017" }
libc = "0.2"
nvml-sys = { path = "../nvml-sys" }
quick-error = "1.2.0"
rust-extra = "0.0.10"
syscall-alt = "0.0.12"
