# This file is part of nvml. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/nvml/master/COPYRIGHT. No part of nvml, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of nvml. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/nvml/master/COPYRIGHT.


[package]
name = "nvml"
description = "A mid-level wrapper around PMDK (the persistent memory development kit), formely NVML"
keywords = ["NVML", "pmem", "libpmem", "PMDK"]
categories = ["external-ffi-bindings", "filesystem", "hardware-support", "memory-management"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/nvml"
repository = "https://github.com/lemonrock/nvml.git"
include = ["/README.md", "/LICENSE", "/COPYRIGHT", "/src/**/*.rs", "/Cargo.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.2"

[dependencies]
bitflags = "1.0"
errno = "0.2"
libc = "0.2"
nvml-sys = { path = "../nvml-sys", version = "0.0.6" }
parking_lot = "0.5.3"
quick-error = "1.2.0"
rust-extra = "0.0.10"
serde = "1.0"
serde_derive = "1.0"
spin-locks = "0.0.2"
syscall-alt = "0.0.12"

[target.'cfg(not(all(target_feature = "rdrnd", any(target_arch = "x86", target_arch = "x86_64"))))'.dependencies]
rand = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2"
winapi = "0.3"
